[package]
name = "day13"
version = "0.1.0"
authors = ["Benjamin Groeber <mail@benjamingroeber.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
helpers = { path = "../helpers"}
thiserror = "1.0.22"
ring-algorithm = "0.2.2"
rayon = "1.5.0"
