[package]
name = "day22"
version = "0.1.0"
authors = ["Benjamin Groeber <mail@benjamingroeber.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.22"
helpers = { path = "../helpers" }
itertools = "0.9.0"
